static/css/style.css
body{
    width: 100%;
    margin: 0;
    background-color: #2AC2F1;
    -webkit-transition: background 1s ease;
    -moz-transition: background 1s ease;
    -ms-transition: background 1s ease;
    -o-transition: background 1s ease;
    transition: background 1s ease;
    height: 100%;
    font-family: "xingothic-tc-w8","Helvetica Neue",Helvetica,Arial,sans-serif;
}

body.white{
    background-color: #fff;
    
}

#front-page{
    background: none;
}

#front-page .footer{
    margin: 0;
    padding: 0;
}

#front-page .footer img{
    width: 100%;
    height: auto;
    margin: 0;
    padding: 0;
}




/* Layout */

.page-wrap {
    width: 1180px;
    max-width: 90%;
    margin: 0 auto;
    position: relative;
    z-index: 99;
}

.msg-wrap {
    width: 80%;
}

.logo {
    background-image: url('../assets/home-logo.svg');
    position: fixed;
    width: 137px;
    height: 75px;
    top:30px;
    right:30px;
}

/* Buttons */



.btn-create {
    width: 167px;
    height: 63px;
    position: fixed;
    top: 155px;
    right: 30px;
}

.btn-info {
    width: 167px;
    height: 63px;
    position: fixed;
    top: 265px;
    right: -23px;
}

.msg-fb-share {
    display: block;
    width: 167px;
    height: 63px;
}

.msg-info {
    display: block;
    width: 167px;
    height: 63px;
}

/* Form */

.tag-line {
    line-height: 66px;
}

.tag-line img {
    padding: 30px 0 0;
}


#msg-create form .line_input {
    display: inline-block;
    border: none;
    color: #000;
    background: transparent;
    border-bottom: 9px solid #fff;
    padding: 5px 2px 8px 2px;
    min-width: 2em;
    font-size: 66px;
    font-weight: 800;
    vertical-align: 7%;

}
 
#msg-create form .line_input:focus {
    outline: none;
}


#msg-create form .name-input {
    font-size: 18px;
    border-bottom:5px solid #fff;
    width: 110px;
    vertical-align: 8%;
}


#msg-create form .tag-submit {
    background: url('../assets/tag-submit.png') top left no-repeat;
    border:none;
    background-size: 120px 43px;
    width: 120px;
    height: 43px;
    margin-top: 80px;
    text-indent: -999999px;
    cursor: pointer;
}


.tag-name-wrap {
    margin-top: 60px;
}

/* View page */

.view-field {
    font-size: 66px;
     font-weight: 800;
     border-bottom: 9px solid #fff;
     padding: 0 10px;
     vertical-align: 7%;
}

.view-name {
    font-size: 18px;
    border-bottom:5px solid #fff;
    padding: 0 10px;
    margin: 0 10px;
}

/* Stream list */

.stream-list {
    list-style: none;
    padding-left: 0;
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -ms-transition: all 1s ease;
    -o-transition: all 1s ease;
    transition: all 1s ease;

}

.stream-list li {
    margin-bottom: 40px;
}

/* Landing */

#front-title img {
    width: 70%;
    padding-top: 60px;
}


/* Landing effect */

body.white ul.stream-list {
    opacity: 0;
}

.front-bg {
    background: url('/assets/gradient_land_blue.jpg') bottom left repeat-x #fff;
    width: 100%;
    height: 100%;
    position: fixed;
    top:0;
    left: 0;
    z-index:0;
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -ms-transition: all 1s ease;
    -o-transition: all 1s ease;
    transition: all 1s ease;
    opacity: 0;
}

.logo {
     -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -ms-transition: all 1s ease;
    -o-transition: all 1s ease;
    transition: all 1s ease;
}

.landing-logo {
    opacity: 0;
}

body.white .front-bg {
    opacity: 1;
}

body.white .landing-logo {
    opacity: 1;
}

body.white .home-logo {
    opacity: 0;
}

